fix(profile): tags don;t break the layout

--- a/app/client/stylesheets/components/pu-info.sass
+++ b/app/client/stylesheets/components/pu-info.sass
@@ -4,7 +4,7 @@
         vertical-align: top
 
     > div
-        max-width: 757px
+        max-width: calc(100% - 125px)
         display: inline-block
         padding: 5px 15px 5px 15px
 
